# coding-challenges

./: README.md
0001_two_sum/: README.md
0001_two_sum/mycpp/: CMakeLists.txt  README.md  conanfile.py
0001_two_sum/mycsharp/: Program.cs  README.md
0001_two_sum/mypython/: main.py
0002_sense_palindrome/: README.md
0002_sense_palindrome/mypython/: main.py
0003_roman_to_int/: README.md
0003_roman_to_int/mypython/: main.py
0004_remove_duplicates/: README.md
0004_remove_duplicates/mypython/: main.py
0005_cli_greet_user/: README.md
0006_cli_maths_game/: README.md
0006_cli_maths_game/mypython/: main.py
0006_cli_maths_game/myrust/: Cargo.toml
0007_anagrams/: README.md
0007_anagrams/mypython/: main.py
0008_nth_largest_elm/: README.md
0008_nth_largest_elm/mypython/: main.py
0009_majority_elm/: README.md
0009_majority_elm/mypython/: main.py
0010_mock_caffeine/: README.md
0010_mock_caffeine/mypython/: main.py
0011_text_game/: README.md
0011_text_game/rustverse/: Cargo.toml
0012_primality/: README.md
0012_primality/myjs/: main.js
0014_add_two_numbers/: README.md
0014_add_two_numbers/mycpp/: CMakeLists.txt  README.md  conanfile.py
0015_fizz_buzz/: README.md
0015_fizz_buzz/golang/: README.md  main.go
0016_validparen/: README.md
0016_validparen/cpplang/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
0017_merge_two_sorted_lists/: README.md
0017_merge_two_sorted_lists/cpplang/: CMakeLists.txt  README.md  conanfile.py
0018_stock_trades/: README.md
0018_stock_trades/cpplang/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
0019_invert_bintree/: README.md
0019_invert_bintree/cpplang/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
0020_flood_fill/: README.md
0020_flood_fill/cpplang/: Makefile  (+3 more)
0021_lowest_common_ancestor_bst/: README.md
0021_lowest_common_ancestor_bst/cpplang/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
0021_lowest_common_ancestor_bst/cpplang/libs/binsearch/: bin_search_tree.cpp  bin_search_tree.h
0021_lowest_common_ancestor_bst/cpplang/libs/quacktests/: testframework.cpp  testframework.h
0021_lowest_common_ancestor_bst/cpplang/tests/: main.cpp
0022_height_balanced_bt/: README.md
0023_message_trim/: package-lock.json  package.json
0999_merge_pdfs/: README.md
1000_convolutions/: README.md
4003_binary_search/: README.md
4003_binary_search/cpplang/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
4003_binary_search/cpplang/libs/binsearch/: binary_search.cpp  binary_search.h
4003_binary_search/cpplang/libs/quacktests/: testframework.cpp  testframework.h
4003_binary_search/cpplang/tests/: main.cpp
aoc20221201/: Cargo.toml  README.md
aoc20231201/: README.md
aoc20231202/: Cargo.toml  README.md
aoc20231203/: Cargo.toml  README.md
aoc20231204/: Cargo.toml  README.md
aoc20231205/: Cargo.toml  README.md
aoc20231206/: .README.md.swp  .puzzle.txt.swp  Cargo.toml  README.md  puzzle.txt
aoc20231207/: Cargo.toml  README.md
aoc20231208/: Cargo.toml  README.md
aoc20231209/: .README.md.swp  Cargo.toml  README.md
aoc20231210/: Cargo.toml  README.md
aoc20231211/: Cargo.toml  README.md
aoc20241201/: README.md
aoc20241201/cppanswer/: CMakeLists.txt
aoc20241201/cppanswer/scripts/: build.sh
aoc20241201/cppanswer/src/: main.cpp
aoc20241201/cppanswer/src/libs/: asset_reader.cpp  asset_reader.h  locations.cpp  locations.h
(+66 files in other folders)
